Fixed alignment of secondary sidebar

--- a/src/components/explore-section/Sidebar/sidebar.module.scss
+++ b/src/components/explore-section/Sidebar/sidebar.module.scss
@@ -29,7 +29,7 @@
       @apply relative -left-[8px] top-20 -rotate-90;
     }
     button {
-      @apply relative bottom-[28px] ml-[2px] justify-center;
+      @apply relative top-[-1.9rem] ml-[2px];
     }
   }
 
